# VCA

./: README.md  build.sh  clean.sh  generate_apps.sh  generate_deb.sh  generate_packages.sh
apps/: generate_apps.sh  pom.xml
apps/NuboEarJava/: generate_zip.sh  pom.xml
apps/NuboEarJava/install/: demo-startup.sh  install.sh
apps/NuboEarJava/src/main/resources/static/: index.html
apps/NuboEyeJava/: generate_zip.sh  pom.xml
apps/NuboEyeJava/install/: demo-startup.sh  install.sh
apps/NuboEyeJava/src/main/resources/static/: index.html
apps/NuboFaceJava/: .bowerrc  generate_zip.sh  pom.xml
apps/NuboFaceJava/install/: demo-startup.sh  install.sh
apps/NuboFaceJava/src/main/resources/static/: index.html
apps/NuboFaceProfileJava/: .project  generate_zip.sh  pom.xml
apps/NuboFaceProfileJava/install/: demo-startup.sh  install.sh
apps/NuboFaceProfileJava/src/main/resources/static/: index.html
apps/NuboMouthJava/: .project  generate_zip.sh  pom.xml
apps/NuboMouthJava/install/: demo-startup.sh  install.sh
apps/NuboMouthJava/src/main/resources/static/: index.html
apps/NuboNoseJava/: generate_zip.sh  pom.xml
apps/NuboNoseJava/install/: demo-startup.sh  install.sh
apps/NuboNoseJava/src/assembly/: bin.xml
apps/NuboNoseJava/src/main/resources/static/: index.html
apps/NuboTrackerJava/: .project  generate_zip.sh  pom.xml
apps/NuboTrackerJava/install/: demo-startup.sh  install.sh
apps/NuboTrackerJava/src/main/resources/static/: index.html
modules/nubo_ear/nubo-ear-detector/: .gitignore  CMakeLists.txt  compile_filter.sh  config.h.cmake  files
modules/nubo_ear/nubo-ear-detector/debian/: changelog  control  files
modules/nubo_ear/nubo-ear-detector/src/gst-plugins/: CMakeLists.txt  kmseardetect.cpp  kmseardetect.h  nuboeardetector.c
modules/nubo_ear/nubo-ear-detector/src/server/interface/: nuboeardetector.kmd.json  (+1 more)
modules/nubo_eye/nubo-eye-detector/: CMakeLists.txt  compile_filter.sh  config.h.cmake
modules/nubo_eye/nubo-eye-detector/debian/: changelog  control  files
modules/nubo_eye/nubo-eye-detector/src/gst-plugins/: CMakeLists.txt  kmseyedetect.cpp  kmseyedetect.h  nuboeyedetector.c  run_plugin.sh
modules/nubo_face/nubo-face-detector/: CMakeLists.txt  compile_filter.sh  config.h.cmake
modules/nubo_face/nubo-face-detector/debian/: changelog  control  files
modules/nubo_face/nubo-face-detector/src/gst-plugins/: CMakeLists.txt  kmsfacedetect.cpp  kmsfacedetect.h  nubo_face_meta.cpp  nubo_face_meta.h  nubofacedetector.c  run_plugin.sh
modules/nubo_mouth/nubo-mouth-detector/: CMakeLists.txt  compile_filter.sh  config.h.cmake
modules/nubo_mouth/nubo-mouth-detector/debian/: changelog  control  files
modules/nubo_mouth/nubo-mouth-detector/src/gst-plugins/: CMakeLists.txt  kmsmouthdetect.cpp  kmsmouthdetect.h  nubomouthdetector.c  run_plugin.sh
modules/nubo_nose/nubo-nose-detector/: CMakeLists.txt  compile_filter.sh  config.h.cmake
modules/nubo_nose/nubo-nose-detector/debian/: changelog  control  files
modules/nubo_nose/nubo-nose-detector/src/: CMakeLists.txt
modules/nubo_nose/nubo-nose-detector/src/gst-plugins/: CMakeLists.txt  kmsnosedetect.cpp  kmsnosedetect.h  nubonosedetector.c  run_plugin.sh
modules/nubo_tracker/nubo-tracker/: .gitignore  CMakeLists.txt  config.h.cmake
modules/nubo_tracker/nubo-tracker/debian/: changelog  control  files
modules/nubo_tracker/nubo-tracker/src/gst-plugins/: CMakeLists.txt  gstnubotracker.cpp  gstnubotracker.h  nubotracker.c  run_plugin.sh
(+54 files in other folders)
